src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__launch_success_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔════════════════════════════[ Step 7/8: Launched ]════════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔═════════════════════════════════[ Launched ]═════════════════════════════════╗"
"║                                                                              ║"
"║                             Team run dispatched.                             ║"
"║                                                                              ║"
"║                            Press Enter to return.                            ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                                 [Enter] return                                 "
"                                                                                "
