src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__launch_team_picker_60x20.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔════════════════════[ Step 1/8: Team ]════════════════════╗"
"║                                                          ║"
"╚══════════════════════════════════════════════════════════╝"
"╔═════════════════════[ Team Picker ]══════════════════════╗"
"║Pick a team                                               ║"
"║ > default-coder                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"╚══════════════════════════════════════════════════════════╝"
"                        Select a team                       "
"        [↑/↓ j/k] pick   [Enter] choose   [Esc] back        "
