src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__manage_delete_confirm_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔═════════════════════════[ Step 2/4: Confirm Delete ]═════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"┌ Confirm Delete ──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                           Delete preset “my-team”?                           │"
"│                                                                              │"
"│                             [y] yes   [n] cancel                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                              [y] yes   [n] cancel                              "
"                                                                                "
