src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__manage_delete_failed_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔═════════════════════════[ Step 4/4: Delete Failed ]══════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════[ Delete Failed ]═══════════════════════════════╗"
"║                                                                              ║"
"║                               permission denied                              ║"
"║                                                                              ║"
"║                            Press Enter to return.                            ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                             [r] retry   [Esc] back                             "
"                                                                                "
