src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__manage_delete_success_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔════════════════════════════[ Step 3/4: Deleted ]═════════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔═════════════════════════════════[ Deleted ]══════════════════════════════════╗"
"║                                                                              ║"
"║                             Team preset removed.                             ║"
"║                                                                              ║"
"║                            Press Enter to return.                            ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                                 [Enter] return                                 "
"                                                                                "
