src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__manage_list_empty_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔══════════════════════════════[ Step 1/4: List ]══════════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════[ Manage ]══════════════════════════════════╗"
"║User-tier presets (built-ins / project-tier are read-only)                    ║"
"║No user presets — use Compose to create one.                                  ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"               [↑/↓] navigate   [e] edit   [d] delete   [Esc] back              "
"                                                                                "
