src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__manage_list_populated_60x20.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔════════════════════[ Step 1/4: List ]════════════════════╗"
"║                                                          ║"
"╚══════════════════════════════════════════════════════════╝"
"╔════════════════════════[ Manage ]════════════════════════╗"
"║User-tier presets (built-ins / project-tier are read-only)║"
"║ > fast-team (fan-out)                                    ║"
"║   my-team (single-pass)                                  ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"╚══════════════════════════════════════════════════════════╝"
"   [↑/↓ j/k] navigate   [e] edit   [d] delete   [Esc] back  "
"                                                            "
